# the-rag-encyclopedia-companion

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
capstone/: README.md  __init__.py
capstone-project/: README.md
capstone-project/rag_capstone/: __init__.py
capstone-project/rag_capstone/app/: __init__.py  pipeline.py  run.py
capstone/app/: __init__.py  pipeline.py  run.py
chapters-companion/ch02-document-processing/: 01_parsing.ipynb  01_parsing.py  README.md  reproduce.py
chapters-companion/ch03-chunking/: 01_recursive_baseline.ipynb  01_recursive_baseline.py  README.md  reproduce.py
chapters-companion/ch04-embeddings/: 01_embeddings.ipynb  01_embeddings.py  README.md  reproduce.py
chapters-companion/ch05-vector-stores/: 01_qdrant.ipynb  01_qdrant.py  README.md  reproduce.py
chapters-companion/ch06-retrieval/: 01_hybrid_rrf.ipynb  01_hybrid_rrf.py  README.md  reproduce.py
chapters-companion/ch07-reranking/: 01_reranking.ipynb  01_reranking.py  README.md  reproduce.py
chapters-companion/ch08-context-construction/: 01_lost_in_the_middle.ipynb  01_lost_in_the_middle.py  README.md  reproduce.py
chapters-companion/ch09-graphrag/: 01_graphrag.ipynb  01_graphrag.py  README.md  reproduce.py
chapters-companion/ch10-adaptive-rag/: 01_adaptive.ipynb  01_adaptive.py  README.md  reproduce.py
chapters-companion/ch11-agentic-rag/: 01_entity_resolution.ipynb  01_entity_resolution.py  README.md  reproduce.py
chapters-companion/ch12-multimodal/: 01_visual_retrieval.ipynb  01_visual_retrieval.py  README.md  reproduce.py
chapters-companion/ch13-grounded-generation/: 01_grounded.ipynb  01_grounded.py  README.md  reproduce.py
chapters-companion/ch14-evaluation/: 01_retrieval_metrics.ipynb  01_retrieval_metrics.py  README.md  reproduce.py
chapters-companion/ch15-enterprise-hardening/: 01_security.ipynb  01_security.py  README.md  reproduce.py
chapters-companion/ch16-performance-observability/: 01_perf_obs.ipynb  01_perf_obs.py  README.md  reproduce.py
chapters/ch02-document-processing/: 01_parsing.ipynb  01_parsing.py  README.md  reproduce.py
chapters/ch03-chunking/: 01_recursive_baseline.ipynb  01_recursive_baseline.py  README.md  reproduce.py
chapters/ch04-embeddings/: 01_embeddings.ipynb  01_embeddings.py  README.md  reproduce.py
chapters/ch05-vector-stores/: 01_qdrant.ipynb  01_qdrant.py  README.md  reproduce.py
chapters/ch06-retrieval/: 01_hybrid_rrf.ipynb  01_hybrid_rrf.py  README.md  reproduce.py
chapters/ch07-reranking/: 01_reranking.ipynb  01_reranking.py  README.md  reproduce.py
chapters/ch08-context-construction/: 01_lost_in_the_middle.ipynb  01_lost_in_the_middle.py  README.md  reproduce.py
chapters/ch09-graphrag/: 01_graphrag.ipynb  01_graphrag.py  README.md  reproduce.py
chapters/ch10-adaptive-rag/: 01_adaptive.ipynb  01_adaptive.py  README.md  reproduce.py
chapters/ch11-agentic-rag/: 01_entity_resolution.ipynb  01_entity_resolution.py  README.md  reproduce.py
chapters/ch12-multimodal/: 01_visual_retrieval.ipynb  01_visual_retrieval.py  README.md  reproduce.py
chapters/ch13-grounded-generation/: 01_grounded.ipynb  01_grounded.py  README.md  reproduce.py
chapters/ch14-evaluation/: 01_retrieval_metrics.ipynb  01_retrieval_metrics.py  README.md  reproduce.py
chapters/ch15-enterprise-hardening/: 01_security.ipynb  01_security.py  README.md  reproduce.py
chapters/ch16-performance-observability/: 01_perf_obs.ipynb  01_perf_obs.py  README.md  reproduce.py
data/: README.md  __init__.py  prepare.py
data/corpus_small/: docs.jsonl
data/golden/: qa.jsonl
docs/: HOW-TO-USE.md  PROVIDER-SWAP.md  SETUP.md
professional_rag_kit/: __init__.py
professional_rag_kit/architectures/: __init__.py
professional_rag_kit/architectures/adaptive/: __init__.py
professional_rag_kit/architectures/agentic/: __init__.py
professional_rag_kit/architectures/graph/: __init__.py
professional_rag_kit/architectures/hierarchical/: __init__.py
professional_rag_kit/architectures/multimodal/: __init__.py
professional_rag_kit/core/: __init__.py  schema.py
professional_rag_kit/eval/: __init__.py  suite.py
professional_rag_kit/ingestion/: __init__.py
professional_rag_kit/ingestion/chunking/: __init__.py
professional_rag_kit/ingestion/embedding/: __init__.py
professional_rag_kit/ingestion/indexing/: __init__.py
professional_rag_kit/ingestion/parsing/: __init__.py
professional_rag_kit/production/: __init__.py
professional_rag_kit/production/generation/: __init__.py
professional_rag_kit/production/observability/: __init__.py
professional_rag_kit/production/security/: __init__.py
professional_rag_kit/production/serving/: __init__.py
professional_rag_kit/retrieval/: __init__.py
professional_rag_kit/retrieval/context/: __init__.py
ragkit/: __init__.py
ragkit/architectures/: __init__.py
ragkit/core/: __init__.py  config.py  schema.py
ragkit/eval/: __init__.py  metrics.py  suite.py
ragkit/ingestion/: __init__.py
ragkit/production/: __init__.py
ragkit/retrieval/: __init__.py
tests/: test_agentic.py  test_architectures_bc.py  test_capstone.py  test_chunking.py  test_core.py  test_eval.py  test_fusion.py  test_metrics.py  test_production.py  test_query_routing.py  test_retrieval.py
tools/: py2nb.py
(+24 files in other folders)
